# SkyLearn

./: .env.sample  .flake8  .gitignore  course.json  lesson.json  payments.json  pyproject.toml  users.json
config/: settings.py  urls.py
materials/: apps.py  models.py  serializers.py  urls.py  views.py
materials/management/commands/: add_test_info.py
materials/migrations/: 0001_initial.py  0002_lesson_course.py  0003_alter_lesson_course.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_user.py
