[project]
name = "skylearn"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim Semenov",email = "vadimsemenov53@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "django (>=6.0.7,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "django-phonenumber-field[phonenumbers] (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# Максимальная длина строки
line_length = 119